const InstanceException = require('./InstanceException.js');

module.exports = class InstanceNotFoundException extends InstanceException {
};
