module.exports = class VpcException extends Error {};
