const VpcException = require('./VpcException.js');

module.exports = class VpcNotFoundException extends VpcException {};
