@startuml
skinparam classAttributeIconSize 0

note as t1
VIR1_deliver
Class diagram
Authors
    Yannick Baudraz
    Armand Marechal
Date : 2022-06-19
end note

package deliver {
    class Infra as "DescribeInfra" #aliceblue {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe(vpcName : String) : String
    }

    class Credentials #aliceblue {
        +constructor(awsClient : AwsCloudClientImpl.connection, outputDir : String)
        +describeLinuxSshKeys() : void
        +describeWindowsPasswords() : void
    }

    class VpcHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe(vpcName : String) : object
    }

    class SubnetHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe(vpcName : String) : object[]
    }

    class SecurityGroupHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe(vpcName : String, securityGroupName = " " : String) : object[]
    }

    class InstanceHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe(instanceName : String) : object[]
        +describeWindowsInstances() : object[]
    }

    class KeyPairHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe() : object[]
    }

    class WindowsPasswordHelper {
        +constructor(awsClient : AwsCloudClientImpl.connection)
        +describe() : object[]
    }

    together {
        class Error
        class VpcException
        class VpcNotFoundException
        class InstanceException
        class InstanceNotFoundException
    }
}

package core {
    interface ICloudClient{
        +constructor(cloudRegion: string, logPath: string)
        +readParam(path: string, target: object): object
        +log(message: string, type: enum): void
        +exists(type: enum, name: string): boolean
    }

    class AwsCloudClientImpl implements ICloudClient {
        +connection: aws.ec2
        {static} +resouceType: enum

        {static} +initialize(cloudRegion: string, logPath: string, accountId: string): AwsCloudClientImpl
        +regionExists(region: string): boolean
    }
}

AwsCloudClientImpl *-- Infra
AwsCloudClientImpl *-- Credentials
AwsCloudClientImpl *-- VpcHelper
AwsCloudClientImpl *-- SubnetHelper
AwsCloudClientImpl *-- SecurityGroupHelper
AwsCloudClientImpl *-- InstanceHelper
AwsCloudClientImpl *-- KeyPairHelper
AwsCloudClientImpl *-- WindowsPasswordHelper

Infra ..> VpcHelper
Infra ..> SubnetHelper
Infra ..> SecurityGroupHelper
Infra ..> InstanceHelper
Infra ..> KeyPairHelper

Credentials ..> WindowsPasswordHelper
Credentials ..> KeyPairHelper

VpcException --|> Error
VpcNotFoundException --|> VpcException
InstanceException --|> Error
InstanceNotFoundException --|> InstanceException

SubnetHelper ..> VpcHelper
SecurityGroupHelper ..> VpcHelper
WindowsPasswordHelper ..> InstanceHelper

VpcHelper ..> VpcNotFoundException
InstanceHelper ..> InstanceNotFoundException

@enduml
